# Foogle

./: .dockerignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  main.py
app/loader/: loader.py  preprocess.py
app/pages/: robots.txt.py
app/search/: engine.py  loader.py  preprocess.py  retriever.py
app/src/: config.py
app/src/search/: loader.py  postprocess.py  preprocess.py  retriever.py
app/src/web/: generator.py
app/web/: generator.py
examples/: Apple IFRS.txt  МСФО Акрон.txt  МСФО МТС.docx  МСФО Полюс.txt  МСФО Сибур.docx
