[tool.poetry]
name = "foogle"
version = "0.1.0"
description = "Educational project for UrFU Python class"
authors = ["Daniil Semenov <49916703+sicutglacies@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
langchain = "^0.1.14"
rank-bm25 = "^0.2.2"
unstructured = {extras = ["all-docs"], version = "^0.13.2"}
streamlit = "^1.33.0"
watchdog = "^4.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
